samples/_failures_safe/1761551694_fff3c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3d427c8.c: In function ‘parser_parse_term’:
./samples/SAFE/__tmp_e3d427c8.c:160:13: error: expected declaration or statement at end of input
  160 |             result /= right;
      |             ^~~~~~
./samples/SAFE/__tmp_e3d427c8.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3d427c8.c:160:13: error: expected declaration or statement at end of input
